# Drone_uCOS

./: .gitignore  ;  CMakeLists.txt  Makefile  README.md  STM32F401RETx_FLASH.ld  SystemInit.c  TODO.md  arm-none-eabi.cmake  debug.cfg  devNote.md  startup_stm32f401xe.s  system_stm32f4xx.c  tmp
Basic/Inc/: core_cm4.h  stm32f4xx.h
Cfg/Template/: os_cfg.h
HMCcal/: data.txt  dataCluster.txt  dataNo.txt  minicom.cap  plot.py
Ports/stm32f401/GNU/: os_cpu.h  os_cpu_a.s  os_cpu_c.c
Source/: Includes.h  main.c  main.h  sendInfo.c  sendInfo.h  shell.c  shell.h  test.cpp  test.hpp  ucos_ii.h  user_INT.c
Source/OS/Ports/stm32f401/GNU/: os_cpu_a.s
Source/drivers/: HMC5883.c  IIC.c  LED.c  MPU6050.c  REC.c  TIM.c  USART.c  dma.c  motor.c  oled2.c  position.c
Source/drivers/Inc/: HMC5883.h  IIC.h  LED.h  MPU6050.h  OLED_Font2.h  REC.h  TIM.h  USART.h  dma.h  motor.h  oled2.h  position.h
Source/lib/: cali.c  cali.cpp  control.c  ekf.c  ekf.c.backup  ekf.cpp  mymath.c  pid.c  test
Source/lib/embeddedLapack/src/Lapack/Blas/: daxpy.c  dcopy.c  ddot.c  dgemm.c  dgemv.c  dger.c  dnrm2.c  drot.c  dscal.c  dswap.c  dtrmm.c  dtrmv.c  dtrsm.c  idamax.c  sdot.c  snrm2.c
Source/lib/embeddedLapack/src/Lapack/F2c/: d_lg10.c  d_sign.c  i_nint.c  pow_dd.c  pow_di.c  pow_ri.c  r_lg10.c  r_sign.c
Source/lib/embeddedLapack/src/Lapack/Include/: clapack.h  f2c.h
Source/lib/embeddedLapack/src/Lapack/Install/: dlamch.c  slamch.c
Source/lib/embeddedLapack/src/Lapack/Scr/: dbdsqr.c  dgebak.c  dgebal.c  dgebd2.c  dgebrd.c  dgeev.c  dgehd2.c  dgehrd.c  dgelq2.c  dgelqf.c  dgeqr2.c  dgeqrf.c  dgesv.c  dgesvd.c  dgetf2.c  dgetrf.c  dgetrs.c  dhseqr.c  disnan.c  dlabad.c  dlabrd.c  dlacpy.c  dladiv.c  dlaexc.c  dlahqr.c  dlahr2.c  dlaisnan.c  dlaln2.c  dlange.c  dlanv2.c  dlapy2.c  dlaqr0.c  dlaqr1.c  dlaqr2.c  dlaqr3.c  dlaqr4.c  dlaqr5.c  dlarf.c  dlarfb.c  dlarfg.c  (+60 more)
Source/lib/embeddedLapack/src/LinearAlgebra/: add.c  chol.c  cofact.c  copy.c  cut.c  declareFunctions.h  det.c  diag.c  diagpower.c  dot.c  eabs.c  eig.c  eye.c  hankel.c  horzcat.c  insert.c  inv.c  linprog.c  linsolve.c  lu.c  maxvector.c  mdiag.c  minvector.c  move.c  mpower.c  mul.c  norm.c  ones.c  pinv.c  power.c  print.c  qr.c  quadprog.c  rank.c  repmat.c  scale.c  sqrte.c  sub.c  sumrows.c  svd.c  (+7 more)
Source/lib/embeddedLapack/src/qpOASES/Header/qpOASES_e/: Bounds.h  Constraints.h  Matrices.h  QProblemB.h  Types.h  Utils.h
Source/lib/embeddedLapack/src/qpOASES/Source/: Matrices.c  OQPinterface.c  QProblem.c  QProblemB.c  Utils.c
Source/lib/inc/: cali.h  cali.h.backup  cali.hpp  control.h  ekf.h  ekf.h.backup  ekf.hpp  mymath.h  pid.h
Source/syscalls/: syscalls.c
Source/syscalls/inc/: syscalls.h
Source/trace/: trace.c  trace.h
tools/: attitude.py  barAni.py  betterAttitude.py  data.txt  log.py  minicom.cap  test.py
